--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,14 @@
         }
     ],
     "require": {
+        "php": "^7.3",
         "phpactor/completion-extension": "~0.2",
         "phpactor/rpc-extension": "~0.1"
     },
     "require-dev": {
-        "phpstan/phpstan": "~0.11.0",
-        "phpunit/phpunit": "~7.0",
-        "friendsofphp/php-cs-fixer": "~2.15.0",
+        "phpstan/phpstan": "~0.12.0",
+        "phpunit/phpunit": "^7.4",
+        "friendsofphp/php-cs-fixer": "^2.14",
         "phpactor/test-utils": "^1.0"
     },
     "autoload": {
@@ -35,5 +36,12 @@
         "branch-alias": {
             "dev-master": "0.2.x-dev"
         }
+    },
+    "scripts": {
+        "integrate": [
+            "vendor/bin/php-cs-fixer fix",
+            "vendor/bin/phpstan analyse lib -c phpstan.neon",
+            "vendor/bin/phpunit"
+        ]
     }
 }
