--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
         }
     ],
     "require": {
-        "php": "^7.3",
-        "phpactor/completion-extension": "~0.2",
-        "phpactor/rpc-extension": "~0.1"
+        "php": "^7.3 || ^8.0",
+        "phpactor/completion-extension": "^0.2.4",
+        "phpactor/rpc-extension": "^0.2.3"
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.0",
         "friendsofphp/php-cs-fixer": "^2.17",
-        "phpactor/test-utils": "^1.0",
+        "phpactor/test-utils": "^1.1.3",
         "phpstan/phpstan": "~0.12.0",
         "phpunit/phpunit": "^9.0",
         "phpspec/prophecy-phpunit": "^2.0"
